--- a/.github/workflows/padavanonly-360T7-adguard-smartDNS.yml
+++ b/.github/workflows/padavanonly-360T7-adguard-smartDNS.yml
@@ -139,7 +139,7 @@ jobs:
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
         echo "release_tag=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
-        touch 2410-release.txt
+        touch 360T7-adguard-smartDNS.txt
         [ ${UPLOAD_GOFILE} = true && ${{ steps.gofile.outputs.url }} ] && echo "🔗 [GoFile](${{ steps.gofile.outputs.url }})" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
 
@@ -150,7 +150,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: 2410-release.txt
+        body_path: 360T7-adguard-smartDNS.txt
         files: ${{ env.FIRMWARE }}/*
 
     - name: Delete workflow runs
