--- a/.github/workflows/padavanonly-360T7-SSR-adguard-smartDNS.yml
+++ b/.github/workflows/padavanonly-360T7-SSR-adguard-smartDNS.yml
@@ -17,8 +17,8 @@ on:
   workflow_dispatch:
 
 env:
-  REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10
-  REPO_BRANCH: 2410
+  REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10 immortalwrt-mt798x-24.10
+  REPO_BRANCH: openwrt-24.10-6.6
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: padavanonly-360T7-SSR-adguard-smartDNS.config
   DIY_P1_SH: padavanonly-part1.sh
