--- a/.github/workflows/2410-360T7-adguard-smartDNS.yml
+++ b/.github/workflows/2410-360T7-adguard-smartDNS.yml
@@ -67,27 +67,17 @@ jobs:
 
     - name: Update feeds
       run: |
-        cd openwrt
-        ./scripts/feeds update -a
-										  
-																													  
+         cd openwrt
+         ./scripts/feeds update -a
+         rm -rf feeds/packages/lang/golang
+         git clone https://github.com/kenzok8/golang feeds/packages/lang/golang
 
-        # 更新 golang 1.24 版本
-        rm -rf feeds/packages/lang/golang
-        git clone https://github.com/sbwml/packages_lang_golang -b 24.x feeds/packages/lang/golang
 
     - name: Install feeds
       run: |
         cd openwrt
         ./scripts/feeds install -a 
-
-        # 移除 openwrt feeds 自带的核心库
-        rm -rf feeds/packages/net/{xray-core,v2ray-geodata,sing-box,chinadns-ng,dns2socks,hysteria,ipt2socks,microsocks,naiveproxy,shadowsocks-libev,shadowsocks-rust,shadowsocksr-libev,simple-obfs,tcping,trojan-plus,tuic-client,v2ray-plugin,xray-plugin,geoview,shadow-tls}
-        git clone https://github.com/xiaorouji/openwrt-passwall-packages package/passwall-packages
-
-        # 移除 openwrt feeds 过时的luci版本
-        rm -rf feeds/luci/applications/luci-app-passwall
-        git clone https://github.com/xiaorouji/openwrt-passwall package/passwall-luci        
+        
          
     - name: Load custom configuration
       run: |
@@ -150,16 +140,10 @@ jobs:
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
         echo "release_tag=$(date +"%Y.%m.%d-%H%M")" >> $GITHUB_OUTPUT
-        touch "${RELEASE_FILE}"
-																																																															
-											   
-
-        if [ "${UPLOAD_GOFILE}" = "true" ] && [ -n "${{ steps.gofile.outputs.url }}" ]; then
-          echo "{U+0001F517} [GoFile](${{ steps.gofile.outputs.url }})" >> "${RELEASE_FILE}"
-        fi
-
+        touch 360T7-adguard-smartDNS.txt
+        [ ${UPLOAD_GOFILE} = true && ${{ steps.gofile.outputs.url }} ] && echo "🔗 [GoFile](${{ steps.gofile.outputs.url }})" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
-    
+
     - name: Upload firmware to release
       uses: softprops/action-gh-release@v2
       if: steps.tag.outputs.status == 'success' && !cancelled()
@@ -167,9 +151,9 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: ${{ env.RELEASE_FILE }}
+        body_path: 360T7-adguard-smartDNS.txt
         files: ${{ env.FIRMWARE }}/*
-        
+
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@main
       with:
