--- a/.github/workflows/padavanonly-360T7-adguard-smartDNS.yml
+++ b/.github/workflows/padavanonly-360T7-adguard-smartDNS.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   REPO_URL: https://github.com/padavanonly/immortalwrt-mt798x-24.10
-  REPO_BRANCH: openwrt-24.10-6.6
+  REPO_BRANCH: 2410
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: padavanonly-360T7-adguard-smartDNS.config
   DIY_P1_SH: padavanonly-part1.sh
@@ -167,5 +167,6 @@ jobs:
         delete_tags: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
 
